# docforge

./: .gitignore  AGENTS.md  AGENTS.md.bak  package.json  pnpm-lock.yaml  pyproject.toml
.claude/rules/: 000-rule-index.mdc
.windsurf/: HANDOFF.md  README_FIRST.md
.windsurf/rules/: 000-rule-index.md  005-project-architecture.mdc  010-python-environment.mdc  020-frontend-tooling.mdc  030-conversion-workflows.mdc  035-docling-pdf-conversion.mdc  040-weasyprint-css-standards.mdc  090-documentation-standards.mdc  120-written-exam-markdown-labels.mdc  HANDOFF.md  README_FIRST.md
FN-rollspelet/: fn-spelet_2025_fokusområden.md  landdokument_instruktion_v43.md  presentationsuppgift_v43.md  slides_introduktion_vecka43.md
TASKS/: 001-html-to-pdf-setup.md  CURRENT_TASK.md
TASKS/frontend/: us-003a-fix-wcag-aa-contrast-violations.md  us-003b-complete-focus-state-coverage.md  us-003c-add-non-color-error-indicators.md
cj_assessment_research/pdfs_to_convert/: Comparative judgement as a research tool- A meta-analysis of application and reliability.md  Comparative_judgement_as_a_research_tool_A_meta-an.md  Politt Comparative judgement for assessment 2012ACJ-IJTDEAP.md  The Accuracy and Efficiency of a Reference-Based Adaptive Selection Algorithm for Comparative Judgment.md  bartholomew2021 A systematized review of research with adaptive comparative judgment ACJ in higher education.md
docs/converters/: html_to_pdf.md
english_5_course_material/: giffords_circus.md
frontend/: .gitignore  netlify.toml  package.json  pnpm-lock.yaml
frontend/.claude/agents/: aria-implementation.md  css-architecture.md  (+7 more)
frontend/docs/: DOCS_STRUCTURE_SPEC.md  design-spec-teacher-dashboard.md
handout_templates/: spaced_repetition_vocabulary_cefr_b1_handout.html
handout_templates/debate_card_templates/: POWERPOINT_CONVERSION_INSTRUCTIONS.md  abortion_debate_card.html  cannibalism_debate_card.html  death_penalty_debate_card.html  debate_card_style.css  debate_card_template.html  debate_foundations_reference.html  debate_foundations_slides.html  debate_foundations_slides.md  debate_handout.html  debate_prep_planner.html  gene_editing_debate_card.html  healthcare_debate_card.html  judges_score_card.html  main_planner_and_teachers_guide.html  moderator_script.html  organ_donation_debate_card.html  student_debate_guide.html  student_quick_rules_and_role_instructions_for_teams_and_judges.html  swedish_citizenship_tests_and_pledge.html  swedish_citizenship_tests_debate_card.html  timed_essay_prompt.html
handout_templates/debattkort_mallar/: debatt_mall.html  elbilar_etik.html  energiskatt_ai.html  karnkraft_vindkraft.html  kottfri_skola.html  miljotull_mode.html  mopedbilar_elcyklar.html  norden_klimatansvar.html  temperatur_skola.html  utslapsratter_flyg.html
handout_templates/english_1_templates/: formal_letter_handin_checklist.html
handout_templates/fn_rollspel/: landdokument_instruktion.html  landdokument_style.css  presentationsinstruktion.html  projektvecka_43_forsattsblad.html  projektvecka_43_introduktion.html
handout_templates/instuderingsfrågor_templates/: sammanfattning_medeltiden_renässansen.html  tidslinje.html  tidslinje_compact.html  tidslinje_compact_single_page.html  övergripande_instuderingsfrågor_medeltiden_renässansen.html
handout_templates/report_templates/: kalibrering_rapport_a4_optimized.html  kalibrering_rapport_style.css  onsdags_konferens_planering_29_10.html
handout_templates/student_guides_templates/: spaced_repetition_style.css  spaced_repetition_vocabulary_cefr_b1_handout.html  spaced_repetition_vocabulary_cefr_b1_handout_debug.html
handout_templates/written_exam_templates/: written_exam_template.html
mentor/: list_to_outlook_converter.py
mentor/sa24d/: SA24D_VH_MEJL.csv  convert_to_xlsx.py  email_list.md  find_missing_students.py  mentorselever.csv  sa24d_mentorselever_olof_ola.csv  sa24d_mentorselever_olof_ola.xlsx  sa24d_student_list.csv  students_to_add_to_ola.csv  ~$sa24d_mentorselever_olof_ola.xlsx
scripts/: build_css.py  convert_md_to_written_exam.py  handout_builder.py
scripts/converters/: convert_html_to_pdf.py  convert_md_to_docx.py  convert_md_to_pdf.py  convert_pdf_to_md.py  convert_pdf_to_md_advanced.py  docx_to_markdown.py  extract_text_from_image.py  md_to_txt.py  text_to_speech.py
scripts/grading/: README.md  grade_assessment.py  llm_grader.py  manual_grading_assistant.py  verify_parser.py
scripts/maintenance/: clean_textbook_questions.py  skapa_visualiseringar.py
styles/src/: tailwind.css
svenska_2/medeltiden_renässansen/: PROMPT_PROVSAMMANSTALLNING.md  provinstruktioner.md
tests/converters/: test_convert_pdf_to_md_advanced.py  test_text_to_speech.py
utils/md-to-html-converter/: modulär_arkitektur_101_debug.html
(+39 files in other folders)
